--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primary_light">#FDE3F4</color>
+    <color name="primary_dark">#1A2A46</color>
+    <color name="primary_yellow">#FFE459</color>
+    <color name="primary_red">#F63131</color>
+
 </resources>
