--- a/app/src/main/res/layout/activity_first_period.xml
+++ b/app/src/main/res/layout/activity_first_period.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/txt_start_first_period"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,6 @@
         android:textColor="@color/primary_light"
         android:textSize="48dp">
     </Button>
-
     <Button
         android:id="@+id/btn_no"
         android:layout_width="148dp"
