--- a/app/src/main/res/layout/activity_free_setting.xml
+++ b/app/src/main/res/layout/activity_free_setting.xml
@@ -9,7 +9,21 @@
     <TextView
         android:id="@+id/Head"
         android:layout_width="match_parent"
-        android:layout_height="207dp"
+        android:layout_height="84dp"
+        android:background="@color/primary_light"
+        android:gravity="center"
+        android:text="Calendar"
+        android:textColor="@color/primary_dark"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/text_nickname"
+        android:layout_width="match_parent"
+        android:layout_height="123dp"
         android:background="@color/primary_light"
         android:gravity="center"
         android:text="Hello, NICKNAME!"
@@ -18,14 +32,14 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/Head" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Head">
+        app:layout_constraintTop_toBottomOf="@+id/text_nickname">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,7 +53,7 @@
                 android:textStyle="bold"
                 android:gravity="center"
                 android:background="@drawable/style_free_setting_content"
-                android:text="Edit name"/>
+                android:text="Edit nickname"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
