--- a/app/src/main/res/layout/listitem_alarm.xml
+++ b/app/src/main/res/layout/listitem_alarm.xml
@@ -7,7 +7,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingStart="10dp"
+        android:background="@drawable/style_symptom_content">
 
         <RadioButton
             android:id="@+id/radio_hour"
@@ -20,7 +22,7 @@
             android:paddingHorizontal="10dp"
             android:paddingVertical="15dp"
             android:buttonTint="@color/primary_light"
-            android:background="@drawable/style_symptom_content"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
