--- a/app/src/main/res/layout/activity_free_setting.xml
+++ b/app/src/main/res/layout/activity_free_setting.xml
@@ -12,7 +12,7 @@
         android:layout_height="84dp"
         android:background="@color/primary_light"
         android:gravity="center"
-        android:text="Calendar"
+        android:text="Setting"
         android:textColor="@color/primary_dark"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -37,6 +37,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_nickname">
@@ -45,54 +46,58 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:textSize="35sp"
-                android:textColor="@color/primary_light"
-                android:textStyle="bold"
-                android:gravity="center"
                 android:background="@drawable/style_free_setting_content"
-                android:text="Edit nickname"/>
+                android:gravity="center"
+                android:text="Edit nickname"
+                android:textColor="@color/primary_light"
+                android:textSize="35sp"
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:textSize="35sp"
-                android:textColor="@color/primary_light"
-                android:textStyle="bold"
-                android:gravity="center"
                 android:background="@drawable/style_free_setting_content"
-                android:text="Record of my period"/>
+                android:gravity="center"
+                android:text="Record of my period"
+                android:textColor="@color/primary_light"
+                android:textSize="35sp"
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:textSize="35sp"
-                android:textColor="@color/primary_light"
-                android:textStyle="bold"
-                android:gravity="center"
                 android:background="@drawable/style_free_setting_content"
-                android:text="Sanitary pad time"/>
+                android:gravity="center"
+                android:text="Sanitary pad time"
+                android:textColor="@color/primary_light"
+                android:textSize="35sp"
+                android:textStyle="bold" />
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switch1"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:textSize="35sp"
-                android:textColor="@color/primary_light"
-                android:textStyle="bold"
-                android:gravity="center"
                 android:background="@drawable/style_free_setting_content"
-                android:text="Notification" />
+                android:gravity="center"
+                android:text="Notification"
+                android:textColor="@color/primary_light"
+                android:textSize="35sp"
+                android:textStyle="bold" />
+
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switch2"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:textSize="35sp"
-                android:textColor="@color/primary_light"
-                android:textStyle="bold"
-                android:gravity="center"
                 android:background="@drawable/style_free_setting_content"
-                android:text="Pregnancy" />
+                android:gravity="center"
+                android:text="Pregnancy"
+                android:textColor="@color/primary_light"
+                android:textSize="35sp"
+                android:textStyle="bold" />
 
 
         </LinearLayout>
