--- a/app/src/main/res/layout/activity_edit_period.xml
+++ b/app/src/main/res/layout/activity_edit_period.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark"
-    tools:context=".RecentPeriodActivity">
+    tools:context=".EditPeriodActivity">
 
     <TextView
-        android:id="@+id/enter_first_date_txt"
+        android:id="@+id/text_enter_first_date"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:background="@color/primary_light"
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent"></TextView>
 
     <Button
-        android:id="@+id/start_btn"
+        android:id="@+id/btn_start"
         android:layout_width="180dp"
         android:layout_height="93dp"
         android:layout_marginStart="10dp"
@@ -33,15 +33,15 @@
         android:textSize="48dp"
         android:textAllCaps="false"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/enter_first_date_txt"></Button>
+        app:layout_constraintTop_toBottomOf="@id/text_enter_first_date"></Button>
 
     <Button
-        android:id="@+id/end_btn"
+        android:id="@+id/btn_end"
         android:layout_width="180dp"
         android:layout_height="93dp"
         android:background="@drawable/style_unclicked_period_border"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/enter_first_date_txt"
+        app:layout_constraintTop_toBottomOf="@id/text_enter_first_date"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="15dp"
         android:text="end"
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/start_btn">
+        app:layout_constraintTop_toBottomOf="@+id/btn_start">
     </FrameLayout>
 
     <Button
