--- a/app/src/main/res/layout/fragment_edit_period_end.xml
+++ b/app/src/main/res/layout/fragment_edit_period_end.xml
@@ -4,9 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".RecentPeriodStartFragment"
-    android:background="@color/primary_dark">
-
+    android:background="@color/primary_dark"
+    tools:context=".EditPeriodEndFragment">
 
     <EditText
         android:id="@+id/edit_year"
@@ -23,14 +22,14 @@
         android:gravity="center"
         android:padding="10dp" />
     <TextView
-        android:id="@+id/txt_year"
+        android:id="@+id/text_year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/edit_year"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="119dp"
         android:layout_marginStart="10dp"
-        android:text="/year"
+        android:text="/year(e)"
         android:textStyle="bold"
         android:textColor="@color/primary_light"
         android:textSize="38dp"
@@ -52,14 +51,14 @@
         android:gravity="center"
         android:padding="10dp"/>
     <TextView
-        android:id="@+id/txt_month"
+        android:id="@+id/text_month"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/edit_month"
-        app:layout_constraintTop_toBottomOf="@id/txt_year"
+        app:layout_constraintTop_toBottomOf="@id/text_year"
         android:layout_marginTop="57dp"
         android:layout_marginStart="10dp"
-        android:text="/month"
+        android:text="/month(e)"
         android:textStyle="bold"
         android:textColor="@color/primary_light"
         android:textSize="38dp"
@@ -81,17 +80,18 @@
         android:gravity="center"
         android:padding="10dp"/>
     <TextView
-        android:id="@+id/txt_day"
+        android:id="@+id/text_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/edit_year"
-        app:layout_constraintTop_toBottomOf="@id/txt_month"
+        app:layout_constraintTop_toBottomOf="@id/text_month"
         android:layout_marginTop="57dp"
         android:layout_marginStart="10dp"
-        android:text="/th"
+        android:text="/th(e)"
         android:textStyle="bold"
         android:textColor="@color/primary_light"
         android:textSize="38dp"
         android:padding="10dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
