[FEAT] calendar 넣기

--- a/app/src/main/res/layout/activity_symptom.xml
+++ b/app/src/main/res/layout/activity_symptom.xml
@@ -39,9 +39,10 @@
             <TextView
                 android:id="@+id/text_headache"
                 android:layout_width="match_parent"
-                android:layout_height="117dp"
+                android:layout_height="135dp"
                 android:text="headache"
                 android:textSize="36sp"
+                android:textStyle="bold"
                 android:gravity="center"
                 android:textColor="@color/primary_light"
                 android:background="@drawable/style_symptom_content"
@@ -51,8 +52,9 @@
             <TextView
                 android:id="@+id/text_breast_pain"
                 android:layout_width="match_parent"
-                android:layout_height="117dp"
+                android:layout_height="135dp"
                 android:text="breast pain"
+                android:textStyle="bold"
                 android:textSize="36sp"
                 android:gravity="center"
                 android:textColor="@color/primary_light"
@@ -63,8 +65,9 @@
             <TextView
                 android:id="@+id/text_depressed"
                 android:layout_width="match_parent"
-                android:layout_height="117dp"
+                android:layout_height="135dp"
                 android:text="depressed"
+                android:textStyle="bold"
                 android:textSize="36sp"
                 android:gravity="center"
                 android:textColor="@color/primary_light"
@@ -75,8 +78,9 @@
             <TextView
                 android:id="@+id/text_fatigue"
                 android:layout_width="match_parent"
-                android:layout_height="117dp"
+                android:layout_height="135dp"
                 android:text="fatigue"
+                android:textStyle="bold"
                 android:textSize="36sp"
                 android:gravity="center"
                 android:textColor="@color/primary_light"
@@ -87,9 +91,10 @@
             <TextView
                 android:id="@+id/text_anxious"
                 android:layout_width="match_parent"
-                android:layout_height="117dp"
+                android:layout_height="135dp"
                 android:text="anxious"
                 android:textSize="36sp"
+                android:textStyle="bold"
                 android:gravity="center"
                 android:textColor="@color/primary_light"
                 android:background="@drawable/style_symptom_content"
@@ -99,8 +104,9 @@
             <TextView
                 android:id="@+id/text_swollen_breast"
                 android:layout_width="match_parent"
-                android:layout_height="117dp"
+                android:layout_height="135dp"
                 android:text="swollen breasts"
+                android:textStyle="bold"
                 android:textSize="36sp"
                 android:gravity="center"
                 android:textColor="@color/primary_light"
@@ -111,8 +117,9 @@
             <TextView
                 android:id="@+id/text_appetite_change"
                 android:layout_width="match_parent"
-                android:layout_height="117dp"
+                android:layout_height="135dp"
                 android:text="appetite changes"
+                android:textStyle="bold"
                 android:textSize="36sp"
                 android:gravity="center"
                 android:textColor="@color/primary_light"
@@ -123,8 +130,9 @@
             <TextView
                 android:id="@+id/text_constipation"
                 android:layout_width="match_parent"
-                android:layout_height="117dp"
+                android:layout_height="135dp"
                 android:text="constipation"
+                android:textStyle="bold"
                 android:textSize="36sp"
                 android:gravity="center"
                 android:textColor="@color/primary_light"
@@ -135,8 +143,9 @@
             <TextView
                 android:id="@+id/text_diarrhea"
                 android:layout_width="match_parent"
-                android:layout_height="117dp"
+                android:layout_height="135dp"
                 android:text="diarrhea"
+                android:textStyle="bold"
                 android:textSize="36sp"
                 android:gravity="center"
                 android:textColor="@color/primary_light"
@@ -147,8 +156,9 @@
             <TextView
                 android:id="@+id/text_dema"
                 android:layout_width="match_parent"
-                android:layout_height="117dp"
+                android:layout_height="135dp"
                 android:text="dema"
+                android:textStyle="bold"
                 android:textSize="36sp"
                 android:gravity="center"
                 android:textColor="@color/primary_light"
@@ -159,8 +169,9 @@
             <TextView
                 android:id="@+id/text_back_pain"
                 android:layout_width="match_parent"
-                android:layout_height="117dp"
+                android:layout_height="135dp"
                 android:text="back pain"
+                android:textStyle="bold"
                 android:textSize="36sp"
                 android:gravity="center"
                 android:textColor="@color/primary_light"
